--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <div class="col-lg-12">
                         <div class="copyright-text">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy; All rights reserved | Designed and developed <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://rpltechno.com" target="_blank">RplTechnoIT Services Pvt Ltd</a>
+Copyright &copy; All rights reserved | Designed and developed <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://rpltechno.com" target="_blank">RpLTechnoIT Services Pvt Ltd</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                 </div>
